syntax = "proto3";

package proto;

import "Target.proto";

message HitTargetMsg {
  int32 gameId = 1;
  uint32 id = 2;
  Target target = 3;
}
